# gradle-wrapper

./: .gitignore  Cargo.toml  GRADLE_COMPATIBILITY.md  LICENSE  LOG.md  PLAN.md  README.md  TEST_PLAN.md  Taskfile.yml
.github/: build.yml  release.yml
.github/workflows/: build.yml
e2e-test/: Cargo.toml
e2e-test/src/: main.rs
gradle-example/: gradle  gradle.bat  gradlew
src/: downloader.rs  exec_replace.rs  main.rs  properties.rs
