[workspace]
members = [
    "packages/e2e-test",
    "packages/wrapper-cli",
]
resolver = "2"

[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.9.1"

[workspace.dependencies]
sha2 = "0.11"
# TODO --ai clean up llm output
zip = { version = "2", default-features = false }
# TODO --ai clean up llm output
ureq = { version = "3", default-features = false }
windows-sys = "0.59"
