[workspace]
members = [
    "packages/e2e-test",
    "packages/wrapper-cli",
]
resolver = "2"

[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.9.2"

[workspace.dependencies]
sha2 = "0.11.0"
zip = { version = "8", default-features = false }
ureq = { version = "3.3.0", default-features = false }
windows-sys = "0.61.2"
